Fixed invisible board as well as accidentally saving duplicate patterns

--- a/src/CSS/Board.css
+++ b/src/CSS/Board.css
@@ -1,3 +1,3 @@
-#lucas-game-board {
+/* #lucas-game-board {
     opacity: 90%;
-}
+} */
